force-app/main/default/objects/Admission__c/fields/Attendance_Record__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Record__c</fullName>
    <description>팬의 누적 입장 데이터</description>
    <inlineHelpText>팬의 누적 입장 데이터</inlineHelpText>
    <label>Attendance Record</label>
    <referenceTo>Attendance_Record__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>