force-app/main/default/objects/Admission__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>경기 정보</description>
    <inlineHelpText>경기 정보</inlineHelpText>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>