force-app/main/default/objects/Admission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Admission_Time__c</columns>
    <columns>Game__c</columns>
    <columns>Fan__c</columns>
    <columns>NAME</columns>
    <columns>Attendance_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>